fix Http snippet border in dark mode

--- a/src/components/apiPage/styles.scss
+++ b/src/components/apiPage/styles.scss
@@ -7,6 +7,10 @@
   box-shadow: rgba(0, 0, 0, 0.07) 0px 0px 0px 1px;
   margin-bottom: var(--paragraph-margin-bottom);
 }
+.dark .api-block {
+  border: 1px solid var(--border-color);
+  box-shadow: none;
+}
 
 .api-block-header {
   border-top-left-radius: 3px;
